@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon 
-  id="service.nfo.watchedstate.updater" 
-  name="NFO Watchedstate Updater" 
-  version="1.1.1" 
-  provider-name="4lb3rtO">
-  <requires>
-    <!-- Those are the version on final release. Just depend on the python version for Betas/RCs -->
-    <import addon="xbmc.python" version="2.19.0"/>	  
-    <import addon="xbmc.json"   version="6.20.0"/>
-    <import addon="xbmc.addon"  version="14.0.0"/>
-  </requires>
-  <extension 
-    point="xbmc.service" 
-    library="default.py" 
-    start="login"/>
-  <extension point="xbmc.addon.metadata">
-    <summary lang="en">Renewed your watchedstate in nfo files</summary>
-    <summary lang="de">Erneuert deinen watchedstate in den nfo Dateien</summary>
-    <description lang="en">Update your watchedstate in the nfo files as soon as this happens in the XBMC library.</description>
-    <description lang="de">Aktualisiert deinen watchedstate in den nfo Dateien, sobald dies in der XBMC Bibliothek geschieht.</description>
-    <platform>all</platform>
-    <language>en</language>
-    <language>de</language>
-    <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</license>
-    <forum><!-- http://www.kodinerds.net/index.php/Thread/36207 --></forum>
-    <website></website>
-    <email>4lb3rtO@gmx.de</email>
-    <source><!-- https://github.com/4lb3rtO/service.nfo.watchedstate.updater.git --></source>
-  </extension>
+<addon id="service.nfo.watchedstate.updater" name="NFO Watchedstate Updater (xb MOD)" version="1.1.13" provider-name="4lb3rtO, xb (MOD)">
+	<requires>
+		<!-- Those are the version on final release. Just depend on the python version for Betas/RCs -->
+		<import addon="xbmc.python" version="2.19.0"/>		
+		<import addon="xbmc.json"   version="6.20.0"/>
+		<import addon="xbmc.addon"  version="14.0.0"/>
+	</requires>
+	<extension point="xbmc.service" library="default.py" start="login"/>
+	<extension point="xbmc.addon.metadata">
+		<summary lang="en">Watchedstate .NFO Updater</summary>
+		<description lang="en">This addon writes the watchedstate to the corresponding .nfo file as soon as it updated within the KODI library.</description>
+		<platform>all</platform>
+		<license/>
+		<forum>http://forum.kodi.tv/showthread.php?tid=242892</forum>
+		<website/>
+		<email/>
+		<source/>
+		<news>
+[B]1.1.14[/B] (2020-04-08)
+- Fix unicode error in notification. Notify by default for errors.
+
+[B]1.1.13[/B] (2020-03-24)
+- xb MOD: Add lastplayed
+
+[B]1.1.12[/B] (2016-08-05)
+- Minor cleanup
+
+[B]1.1.11[/B] (2016-08-03)
+- Minor cleanup
+
+[B]1.1.10[/B] (2016-07-23)
+- axbmcuser MOD: Fix for KODI 17 (Krypton): "videolibrary" renamed to "Videos" [default.py]
+		</news>
+		<assets>
+			<icon>resources/icon.png</icon>
+		</assets>
+	</extension>
 </addon>
