@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
   <string id="32000">General</string>
-  <string id="32001">XBMC IP</string>
-  <string id="32002">XBMC JSONRPC TCP Port</string>
-  <string id="32003">Change existing watched-tags (for TMM/ME only)</string>
-  <string id="32004">Create/Add watched-tags</string>
-  <string id="32005">Error Notifications</string>
+  <string id="32001">KODI IP</string>
+  <string id="32002">KODI JSON RPC TCP Port</string>
+  <string id="32003">Use additional watched-tag (for TMM/ME)</string>
+  <string id="32004">- Add watched-tags if non-existant</string>
+  <string id="32005">Display Notification on Update</string>
   
-  <string id="32100">Description:</string>	
-  <string id="32101">-XBMC IP: localhost is 127.0.0.1</string>
-  <string id="32102">-XBMC JSONRPC TCP Port: This port can be configured in the as.xml - Default: 9090</string>
-  <string id="32103">-In System/Settings/Network/Services activate "Allow programs on this system</string>
-  <string id="32104"> to control XBMC" and "Allow programs on other systems to control XBMC".</string>
-  <string id="32105">-TinyMediaManager/MediaElch users can set an optional watched-tag</string>
-  <string id="32106"> in the nfo files to prevent inconsistencies.</string>
+  <string id="32100">Configuration:</string>
+  <string id="32101">Go to "System / Services / Control"</string>
+  <string id="32102">Check "Allow remote control from applications on this system"</string>
+  <string id="32103">Check "Allow remote control from applications on other systems"</string>
 </strings>
