@@ -3,17 +3,13 @@
   <category label="32000">
     <setting id="xbmcip"           type="ipaddress" label="32001" default="127.0.0.1" />
     <setting id="xbmcport"         type="number"    label="32002" default="9090" />
-    <setting id="changewatchedtag" type="bool"      label="32003" default="false" />
+    <setting id="changewatchedtag" type="bool"      label="32003" default="true" />
     <setting id="createwatchedtag" type="bool"      label="32004" default="true" enable="eq(-1,true)" />
     <setting id="notification"     type="bool"      label="32005" default="true" />
     
     <setting label="32100" type="lsep" />
     <setting label="32101" type="lsep" />
     <setting label="32102" type="lsep" />
-    <setting type="sep" />
     <setting label="32103" type="lsep" />
-    <setting label="32104" type="lsep" />
-    <setting label="32105" type="lsep" />
-    <setting label="32106" type="lsep" />
   </category>
 </settings>
